--- a/sample.tex
+++ b/sample.tex
@@ -181,6 +181,11 @@ The probing parameters are represented in Table 1.
 	\label{table:name}
 	\caption{Parameter values for the experiment}
 \end{table}
+\begin{figure}[h!]\center
+	\includegraphics[width=0.3\linewidth]{dno.jpg}
+	\caption{The function $\sigma_d$ discribed seabottom surface with a size of 20 m. to 20 m.}
+	\label{ris:dno}
+\end{figure}
 
 %The surface of the bottom is show described by a function 
 The coefficient of bottom scattering is shown in Fig. 2 and described by a function 
@@ -200,14 +205,9 @@ The coefficient of bottom scattering is shown in Fig. 2 and described by a funct
 
 %The function (\ref{sigma_d}) discribed in the Fig. \ref{ris:dno}.
 
-\begin{figure}[h!]\center
-	
-	\includegraphics[width=0.3\linewidth]{dno.jpg}
-	\caption{Exact solution}
-	\label{ris:dno}
-\end{figure}
 
-Fig. \ref{ris:dno} shows the seabottom surface with a size of 20 m to 20 m. The sonar moves from the top left corner downwards, thereby setting the $ r_2 $ axis. Each line of the image corresponds to the new probing interval. From the physical point of view, the coefficient of the seabottom scattering is part of the reflected signal and is limited by the range [0;1]. Real experiments show that a part of the reflected signal does not exceed 35\%. At the Fig. \ref{ris:dno} and further black color corresponds to 0, whereas white color to 0.35. Experiments with different width of the directivity pattern of the receiving antenna are presented below. The letters corresponds to the iteration number in the Seidel algorithm, starting from zero.
+
+The sonar moves from the top left corner downwards, thereby setting the $ r_2 $ axis. Each line of the image corresponds to the new probing interval. From the physical point of view, the coefficient of the seabottom scattering is part of the reflected signal and is limited by the range [0;1]. Real experiments show that a part of the reflected signal does not exceed 35\%. At the Fig. \ref{ris:dno} and further black color corresponds to 0, whereas white color to 0.35. Experiments with different width of the directivity pattern of the receiving antenna are presented below. The letters corresponds to the iteration number in the Seidel algorithm, starting from zero.
 
 \begin{figure}[h!]\center%---------------ONE DEGREE---------------
 	\begin{tabular}{cccc}
