--- a/sample.tex
+++ b/sample.tex
@@ -170,7 +170,7 @@ where,
 Eq. (\ref{invI}) is S-diagonal SLE. Parameter $s$ depends on the width of the receiver directivity pattern and on the source duration. For solving SLE (\ref{invI}) authors use  Seidel's method.
 \section{Numerical experiments}
 In the experiments, authors consider cases of the focusing on the different width of the directivity pattern. Authors use the formula (\ref{sigma_form}) as a zero iteration in Seidel's method, pictured on the Fig. (\ref{ris:desc1}) - (\ref{ris:desc6}) over character a). Experiments reach with the angle of the directivity pattern as  \{1, 2, 4, 8, 14, 40\} degrees. 
-The probing parameters are represented in Table 1.
+The probing parameters are represented in Table 1 and seabottom surface with a size of 20m to 20m are shown in the Fig. \ref{ris:dno}.
 \begin{table}[!ht]
 	\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
 		\hline
@@ -183,7 +183,7 @@ The probing parameters are represented in Table 1.
 \end{table}
 \begin{figure}[h!]\center
 	\includegraphics[width=0.3\linewidth]{dno.jpg}
-	\caption{The function $\sigma_d$ discribed seabottom surface with a size of 20 m. to 20 m.}
+	\caption{The coefficient of bottom scattering }
 	\label{ris:dno}
 \end{figure}
 
